# bench

./: .commitlintrc.json  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  RELEASE_NOTES_v0.0.2.md  SECURITY.md  mkdocs.yml  pyproject.toml
.bench/: baseline.json  cosign.pub
cli/: README.md  pyproject.toml
cli/src/inferencebench/: _logging.py  cli.py
cli/src/inferencebench/commands/: _fixtures_adapters.py  _fixtures_registry.py  attest.py  audit.py  bundle.py  cache.py  ci.py  cluster.py  compare.py  cost.py  coverage.py  dashboard.py  diff.py  doctor.py  export.py  fetch.py  fixtures.py  history.py  leaderboard.py  list_cmd.py  matrix.py  plugin.py  profile.py  publish.py  replay.py  run.py  schema_cmd.py  server.py  spec.py  summary.py  tour.py  verify.py  watch.py
cli/src/inferencebench/data/: __init__.py  plugin-registry.json
cli/tests/: _helpers.py  conftest.py  test_attest_command.py  test_audit_command.py  test_bundle_command.py  test_cache_command.py  test_ci_command.py  test_cli_help.py  test_cluster_command.py  test_compare_command.py  test_cost_command.py  test_coverage_command.py  test_dashboard_command.py  test_diff_command.py  test_diff_with_string_metrics.py  test_doctor_slo.py  test_export_command.py  test_fetch_command.py  test_fixtures_command.py  test_history_command.py  test_leaderboard_command.py  test_list_command.py  test_matrix_command.py  test_plugin_discover.py  test_plugin_init.py  test_plugin_init_e2e.py  test_profile_command.py  test_publish_command.py  test_replay_command.py  test_run_all_benchmarks.py  test_run_command.py  test_run_sweep.py  test_schema_command.py  test_server_command.py  test_spec_command.py  test_summary_command.py  test_tour_command.py  test_watch_command.py
docs/: faq.md  (+6 more)
envelope/: README.md  pyproject.toml
envelope/schema/: envelope.v1.json
envelope/src/inferencebench/envelope/: __init__.py  models.py  signing.py  verify.py
envelope/tests/: test_content_hash.py  test_models.py  test_signing.py  test_verify_chatter.py
harness/: README.md  pyproject.toml
harness/src/inferencebench/harness/: __init__.py  client.py  convergence.py  doctor.py  run.py
harness/src/inferencebench/harness/drivers/: __init__.py  base.py  closed_loop.py  open_loop.py
harness/src/inferencebench/harness/fingerprint/: __init__.py  collect.py  cpu.py  dmi.py  gpu.py  memory.py  numa.py
harness/src/inferencebench/harness/metrics/: __init__.py  goodput.py  percentiles.py  power.py
harness/src/inferencebench/harness/telemetry/: __init__.py  base.py  nvml.py  rapl.py
harness/tests/: test_client.py  test_convergence.py  test_determinism.py  test_doctor.py  test_drivers.py  test_fingerprint_collect.py  test_metrics.py  test_power.py  test_telemetry.py
integrations/hf-publisher/: README.md  pyproject.toml
integrations/hf-publisher/src/inferencebench_hf_publisher/: __init__.py  publish.py  readme.py
integrations/hf-publisher/tests/: conftest.py  test_publish.py
plugins/code-generation/: README.md  pyproject.toml
plugins/code-generation/src/inferencebench_code/: __init__.py  plugin.py  runner.py  schemas.py  scoring.py
plugins/code-generation/src/inferencebench_code/benchmarks/: humaneval-mini.yaml  mbpp-mini.yaml
plugins/code-generation/src/inferencebench_code/datasets/: humaneval-mini.jsonl  mbpp-mini.jsonl
plugins/code-generation/tests/: conftest.py  test_code_plugin.py  test_code_runner.py  test_code_scoring.py
plugins/embeddings-retrieval/: README.md  pyproject.toml
plugins/embeddings-retrieval/src/inferencebench_embeddings/: __init__.py  plugin.py  schemas.py  scoring.py
plugins/embeddings-retrieval/src/inferencebench_embeddings/benchmarks/: beir-mini.yaml  long-doc.yaml  msmarco-style.yaml  query-expansion.yaml
plugins/embeddings-retrieval/tests/: conftest.py  test_embeddings_plugin.py  test_embeddings_scoring.py
plugins/llm-inference/: README.md  pyproject.toml
plugins/llm-inference/src/inferencebench_llm/: __init__.py  datasets.py  plugin.py  prices.yaml  pricing.py  schemas.py  slo_profiles.py
plugins/llm-inference/tests/: test_benchmark_specs.py  test_datasets.py  test_engine_http_integration.py  test_fixtures_uri.py  test_integration_cpu.py  test_integration_gpu.py  test_llamacpp_engine.py  test_mlx_engine.py  test_plugin.py  test_pricing.py  test_pricing_yaml.py  test_registry_cost.py  test_sglang_engine.py  test_slo_profiles.py  test_slo_resolution.py  test_telemetry_intervals.py  test_trtllm_engine.py
plugins/llm-mt/: README.md  pyproject.toml
plugins/llm-mt/src/inferencebench_mt/: __init__.py  plugin.py  schemas.py  scoring.py
plugins/llm-mt/tests/: conftest.py  test_mt_plugin.py  test_mt_scoring.py
plugins/llm-quality/: README.md  pyproject.toml
plugins/llm-quality/src/inferencebench_quality/: __init__.py  plugin.py  schemas.py  scoring.py
plugins/llm-quality/tests/: conftest.py  test_judge_scoring.py  test_judge_throttle.py  test_persona_plugin.py  test_persona_scoring.py  test_quality_plugin.py  test_scoring.py
plugins/vision-understanding/: README.md  pyproject.toml
plugins/vision-understanding/src/inferencebench_vision/: __init__.py  multimodal_client.py  plugin.py  schemas.py  scoring.py
plugins/vision-understanding/tests/: conftest.py  test_image_generation.py  test_vision_plugin.py  test_vision_scoring.py
plugins/vision-understanding/tools/: generate_vision_fixtures.py
plugins/voice-transcription/: README.md  pyproject.toml
plugins/voice-transcription/src/inferencebench_voice/: __init__.py  audio_client.py  plugin.py  schemas.py  scoring.py
plugins/voice-transcription/tests/: conftest.py  test_audio_client.py  test_voice_plugin.py  test_voice_scoring.py  test_wav_fixtures.py
tools/leaderboard/: README.md  pyproject.toml
tools/leaderboard/src/inferencebench_leaderboard/: __init__.py  __main__.py  cli.py  data.py  render.py
tools/leaderboard/tests/: conftest.py  test_load_envelopes.py  test_pareto.py  test_render_smoke.py
(+218 files in other folders)
