# Root pyproject for the InferenceBench Suite monorepo (uv workspace).
#
# Per-package pyprojects live in cli/, envelope/, harness/, plugins/<name>/.
# This root file declares the workspace and centralizes lint/type/test config.

[project]
name = "inferencebench-workspace"
version = "0.0.0"
description = "Vendor-neutral, signed-envelope AI benchmark suite (monorepo root)"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Yobitel Communications", email = "bench@yobitel.com" },
]
keywords = ["benchmark", "ai", "ml", "llm", "inference", "vendor-neutral", "reproducible"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/yobitelcomm/bench"
Repository = "https://github.com/yobitelcomm/bench"
Documentation = "https://yobitelcomm.github.io/bench"
Issues = "https://github.com/yobitelcomm/bench/issues"
Changelog = "https://github.com/yobitelcomm/bench/blob/main/CHANGELOG.md"

[tool.uv.workspace]
members = [
    "cli",
    "envelope",
    "harness",
    "plugins/llm-inference",
    "integrations/hf-publisher",
    "tools/leaderboard",
]

[dependency-groups]
dev = [
    "pytest~=8.3",
    "pytest-cov~=5.0",
    "pytest-xdist~=3.6",
    "hypothesis~=6.118",
    "ruff~=0.7",
    "mypy~=1.13",
    "pre-commit~=4.0",
    "syrupy~=4.7",
]
docs = [
    "mkdocs~=1.6",
    "mkdocs-material~=9.5",
    "pymdown-extensions~=10.7",
]

# --- Ruff: formatter + linter ---
[tool.ruff]
line-length = 100
target-version = "py312"
src = [
    "cli/src",
    "envelope/src",
    "harness/src",
    "plugins/llm-inference/src",
    "integrations/hf-publisher/src",
    "tools/leaderboard/src",
    "tests",
]
extend-exclude = [
    ".venv",
    "build",
    "dist",
    "*.egg-info",
    "docs/_build",
]

[tool.ruff.lint]
# Conservative-but-strict starting set. Expand carefully.
select = [
    "E", "W",       # pycodestyle
    "F",            # pyflakes
    "I",            # isort
    "B",            # flake8-bugbear
    "UP",           # pyupgrade
    "S",            # flake8-bandit (security)
    "N",            # pep8-naming
    "C90",          # mccabe complexity
    "ANN",          # flake8-annotations
    "D",            # pydocstyle
    "ARG",          # flake8-unused-arguments
    "PT",           # flake8-pytest-style
    "RUF",          # ruff-specific
]
ignore = [
    "D100", "D101", "D102", "D103", "D104", "D105", "D107",  # missing-docstring (allow gradual adoption)
    "S101",  # assert used (we use them in tests intentionally)
    "S603", "S607",  # subprocess calls — needed for engine launch
    "D203", "D213",  # incompatible docstring conventions
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S", "ANN", "D", "PT006"]   # tests can be less strict
"**/test_*.py" = ["S", "ANN", "D", "PT006", "PT011"]
"**/conftest.py" = ["S", "ANN", "D"]
"cli/src/inferencebench/commands/*.py" = ["ARG001"]   # Typer needs CLI args in the signature even when stubbed
"cli/src/inferencebench/cli.py" = ["ARG001"]            # `version` callback arg is consumed by Typer
"harness/src/inferencebench/harness/doctor.py" = ["S105", "ANN401"]  # PASS/WARN/FAIL enum + opaque NVML handles
"harness/src/inferencebench/harness/fingerprint/gpu.py" = ["ANN401"]   # opaque NVML handles
"harness/src/inferencebench/harness/client.py" = ["ANN401", "S110", "S310"]   # LiteLLM is dynamically typed; tiktoken fallback intentionally silent; controlled HTTP healthcheck
"harness/src/inferencebench/harness/drivers/*.py" = ["ANN401"]   # workload items are caller-defined
"harness/src/inferencebench/harness/run.py" = ["ANN401"]   # workload items are caller-defined
"harness/src/inferencebench/harness/telemetry/base.py" = ["B027"]   # _setup / _teardown are optional override hooks
"harness/tests/**/*" = ["S", "ANN", "D", "PT006", "PT011", "ARG", "SLF001", "E501", "B018"]
"plugins/llm-inference/tests/**/*" = ["S", "ANN", "D", "PT006", "PT011", "ARG", "SLF001", "E501"]
"plugins/llm-inference/src/inferencebench_llm/engines/vllm.py" = ["S310"]   # controlled HTTP probe
"plugins/llm-inference/src/inferencebench_llm/plugin.py" = ["ARG002", "ANN401", "C901"]   # spec arg part of contract API; workload items are caller-defined; _build_envelope has many branches by design
"plugins/llm-inference/src/inferencebench_llm/datasets.py" = ["S311"]   # random.shuffle is fine; we want determinism, not crypto
"plugins/llm-inference/src/inferencebench_llm/pricing.py" = ["D205"]   # multi-paragraph module docstring
"integrations/hf-publisher/tests/**/*" = ["S", "ANN", "D", "N", "PT006", "PT011", "ARG", "SLF001", "E501"]
"tools/leaderboard/tests/**/*" = ["S", "ANN", "D", "N", "PT006", "PT011", "ARG", "SLF001", "E501"]
"tools/leaderboard/src/inferencebench_leaderboard/cli.py" = ["ARG001", "B008"]   # Typer args used by framework; typer.Argument/Option is the canonical Typer pattern

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# --- Mypy: type checking ---
[tool.mypy]
python_version = "3.12"
strict = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "cli/src:envelope/src:harness/src:plugins/llm-inference/src:integrations/hf-publisher/src:tools/leaderboard/src"
warn_return_any = true
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
files = [
    "cli/src",
    "envelope/src",
    "harness/src",
    "plugins/llm-inference/src",
    "integrations/hf-publisher/src",
    "tools/leaderboard/src",
    "tests",
]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
# pynvml ships without type stubs
module = ["pynvml"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# third-party libs without type stubs
module = ["huggingface_hub", "huggingface_hub.*", "jinja2", "jinja2.*", "yaml", "datasets"]
ignore_missing_imports = true

# --- Pytest ---
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
testpaths = [
    "tests",
    "cli/tests",
    "envelope/tests",
    "harness/tests",
    "plugins/llm-inference/tests",
    "integrations/hf-publisher/tests",
    "tools/leaderboard/tests",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: end-to-end test with a small model (CPU OK), <5 min",
    "gpu: requires GPU, runs only on TestBM nightly",
    "paid: invokes paid APIs, runs only with --paid, <$5/test",
    "slow: takes >2 minutes on CPU, nightly only",
    "flaky: known intermittent — reported but not blocking",
]

# --- Coverage ---
[tool.coverage.run]
source = [
    "cli/src",
    "envelope/src",
    "harness/src",
    "plugins/llm-inference/src",
    "integrations/hf-publisher/src",
    "tools/leaderboard/src",
]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 60
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"
