[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inferencebench-envelope"
version = "0.0.2"
description = "Canonical signed-envelope spec + Sigstore signer/verifier for InferenceBench"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
    { name = "Yobitel Communications", email = "bench@yobitel.com" },
]
keywords = ["benchmark", "sigstore", "reproducibility", "ai", "ml"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "pydantic~=2.9",
    "uuid7~=0.1",
    "sigstore~=3.5",
    "cryptography~=44.0",
]

[project.urls]
Homepage = "https://github.com/yobitelcomm/bench"
Documentation = "https://yobitelcomm.github.io/bench/concepts/envelope"

[tool.hatch.build.targets.wheel]
packages = ["src/inferencebench"]
