[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inferencebench-harness"
version = "0.0.0"
description = "Core measurement engine for InferenceBench — drivers, telemetry, percentiles, fingerprinting"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
    { name = "Yobitel Communications", email = "bench@yobitel.com" },
]
keywords = ["benchmark", "telemetry", "nvml", "rapl", "percentiles", "ai", "ml"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Benchmark",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "numpy~=2.1",
    "scipy~=1.14",
    "pydantic~=2.9",
    "structlog~=24.4",
    "nvidia-ml-py~=12.560",  # NVML bindings
    "litellm~=1.50",
]

[project.urls]
Homepage = "https://github.com/yobitelcomm/bench"
Documentation = "https://yobitelcomm.github.io/bench/concepts/harness"

[tool.hatch.build.targets.wheel]
packages = ["src/inferencebench"]
