[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inferencebench-hf-publisher"
version = "0.0.2"
description = "Publish signed InferenceBench envelopes to the Hugging Face Hub as datasets"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
    { name = "Yobitel Communications", email = "bench@yobitel.com" },
]
keywords = ["benchmark", "huggingface", "hf-hub", "ai", "ml", "inferencebench"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "inferencebench-envelope",
    "huggingface_hub>=0.30,<1.0",
    "pydantic~=2.9",
]

[project.urls]
Homepage = "https://github.com/yobitelcomm/bench"
Documentation = "https://yobitelcomm.github.io/bench/integrations/hf-publisher"

[tool.hatch.build.targets.wheel]
packages = ["src/inferencebench_hf_publisher"]

[tool.uv.sources]
inferencebench-envelope = { workspace = true }
