[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inferencebench-embeddings"
version = "0.1.0"
description = "Embeddings retrieval plugin for InferenceBench Suite (deterministic ranking skeleton; real embedding-model invocation deferred)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
    { name = "Yobitel Communications", email = "bench@yobitel.com" },
]
keywords = ["benchmark", "embeddings", "retrieval", "recall", "ndcg", "ai", "ml"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "inferencebench-envelope",
    "inferencebench-harness",
    "pydantic~=2.9",
    "pyyaml~=6.0",
]

[project.entry-points."inferencebench.plugins"]
"embeddings.retrieval" = "inferencebench_embeddings.plugin:EmbeddingsRetrievalPlugin"

[project.urls]
Homepage = "https://github.com/yobitelcomm/bench"

[tool.hatch.build.targets.wheel]
packages = ["src/inferencebench_embeddings"]

[tool.uv.sources]
inferencebench-envelope = { workspace = true }
inferencebench-harness = { workspace = true }
