[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inferencebench-llm"
version = "0.1.0"
description = "LLM inference plugin for InferenceBench Suite (vLLM in Phase 1; SGLang/TRT-LLM/llama.cpp/MLX in Phase 2+)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
    { name = "Yobitel Communications", email = "bench@yobitel.com" },
]
keywords = ["benchmark", "llm", "vllm", "inference", "ai", "ml"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "inferencebench-envelope",
    "inferencebench-harness",
    "pydantic~=2.9",
    "pyyaml~=6.0",
]

[project.entry-points."inferencebench.plugins"]
"llm.inference" = "inferencebench_llm.plugin:LLMInferencePlugin"

[project.urls]
Homepage = "https://github.com/yobitelcomm/bench"

[tool.hatch.build.targets.wheel]
packages = ["src/inferencebench_llm"]

[tool.uv.sources]
inferencebench-envelope = { workspace = true }
inferencebench-harness = { workspace = true }
