[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inferencebench-voice"
version = "0.0.0"
description = "Voice transcription plugin for InferenceBench Suite (deterministic fixture-driven WER/CER skeleton)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
    { name = "Yobitel Communications", email = "bench@yobitel.com" },
]
keywords = ["benchmark", "voice", "asr", "transcription", "wer", "ai", "ml"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "inferencebench-envelope",
    "inferencebench-harness",
    "pydantic~=2.9",
    "pyyaml~=6.0",
]

[project.entry-points."inferencebench.plugins"]
"voice.transcription" = "inferencebench_voice.plugin:VoiceTranscriptionPlugin"

[project.urls]
Homepage = "https://github.com/yobitelcomm/bench"

[tool.hatch.build.targets.wheel]
packages = ["src/inferencebench_voice"]

[tool.uv.sources]
inferencebench-envelope = { workspace = true }
inferencebench-harness = { workspace = true }
