[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inferencebench-leaderboard"
version = "0.0.0"
description = "Static-site leaderboard renderer for signed InferenceBench envelopes"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
    { name = "Yobitel Communications", email = "bench@yobitel.com" },
]
keywords = ["benchmark", "ai", "ml", "llm", "inference", "leaderboard", "static-site"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "inferencebench-envelope",
    "jinja2~=3.1",
    "typer~=0.12",
    "pydantic~=2.9",
]

[project.scripts]
inferencebench-leaderboard = "inferencebench_leaderboard.cli:app"

[project.urls]
Homepage = "https://github.com/yobitelcomm/bench"
Documentation = "https://yobitelcomm.github.io/bench"

[tool.uv.sources]
inferencebench-envelope = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/inferencebench_leaderboard"]

[tool.hatch.build.targets.wheel.force-include]
"src/inferencebench_leaderboard/templates" = "inferencebench_leaderboard/templates"
"src/inferencebench_leaderboard/static" = "inferencebench_leaderboard/static"
